# example_ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: docker-compose.yml
app/back/: Dockerfile  alembic.ini  requirements.txt  server.py
app/back/db/migrations/: env.py
app/back/db/migrations/versions/: 20531b48a64a_added_required_tables.py  44fc87e16786_added_required_tables.py  70193fcb4dde_added_required_tables.py  b59478c5bc08_added_required_tables.py
app/back/src/: config.py  models_utils.py  optimize.py  prepare_utils.py  readme.md  schema.py  service_utils.py  utils.py
app/back/src/model/: predicted_mas.py
app/back/tests/: back_test.py  conftest.py
app/back/tests/test_files/: Позиция_ 5_Ротор № 2204-0667.txt
app/front/: Dockerfile  app.py  requirements.txt
app/front/src/: front_utils.py
app/front/tests/: __init__.py  front_test.py
app/front/tests/test_files/: Ротор № 2204-0358.txt  Ротор № 2204-1252.txt
prepared_data/: ttv_index.pkl
