[tool.poetry]
name = "tochmach_rotors"
version = "0.1.0"
description = "decrease number of tests"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "1.21.6"
pandas = "^1.4.2"
tqdm = "^4.64.0"
scikit-learn = "^1.1.0"
fastapi = "^0.77.1"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
databases = {extras = ["postgresql"], version = "^0.5.5"}
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.2"
requests = "^2.27.1"
pytest-asyncio = "^0.18.3"
lightgbm = "^3.3.2"


[tool.poetry.dev-dependencies]
lightgbm = "^3.3.2"
xgboost = "^1.5.2"
catboost = "^1.0.4"
plotly = "^5.5.0"
scikit-learn = "^1.0.2"
ipython ="^8.0.1"
ipykernel = "^6.8.0"
fastparquet = "^0.8.0"
nbformat = "^5.1.3"
networkx = "^2.6.3"
tqdm = "^4.62.3"
pyvis = "^0.1.9"
ipywidgets = "^7.6.5"
streamlit = "^1.5.1"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^4.0.1"
statsmodels = "^0.13.2"
pandarallel = "^1.5.5"
jupyterthemes = "^0.20.0"
linearmodels = "^4.25"
optuna = {version = "3.0.0-b1", allow-prereleases = true}
shap = "^0.40.0"
llvmlite = "^0.38.0"
numba = "^0.55.1"
autopep8 = "^1.6.0"
openpyxl = "^3.0.9"
hdbscan = "^0.8.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
